@@ -4,6 +4,7 @@
 	* rlc1:
 	    added regalloc.rl
 	    implemented liveness analysis
+	    implemented register allocation
 	* renamed Github repository from growl to rowl
 
 2010-03-25  nineties <nineties48@gmail.com>
